<resources>
    <string name="app_name">Whatsup</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="user_name">User Name</string>
    <string name="user_status">I am available now!</string>
    <string name="update">Update</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_send_message">Cancel Chat Request</string>
    <string name="delete_request_message">Delete</string>
    <string name="confirm_request_message">Confirm</string>
    <string name="unfriend">Unfriend</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="last_seen">Last seen</string>
    <string name="display_user_name">Display User Name</string>
    <string name="display_receiver_message">Display receive message</string>
    <string name="display_sender_message">Display your message sent</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
