<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_activity"
    tools:context=".ProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_visit_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:src="@drawable/profile_image"
        />
        <TextView
            android:id="@+id/tv_visit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_visit_profile"
            android:text="@string/user_name"
            android:layout_marginTop="@dimen/margin_top"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/name"

            />
    <TextView

        android:id="@+id/tv_visit_user_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_visit_user_name"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/user_status"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="@dimen/name"
        />
    <Button
        android:id="@+id/btn_send_msg_request"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_visit_user_status"
        android:background="@drawable/buttons"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        />
    <Button
        android:id="@+id/btn_delete_chat_request"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_send_msg_request"
        android:background="@drawable/buttons"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/delete_request_message"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorAccent"
        android:visibility="invisible"
        />
</RelativeLayout>